# Chatbot_Ollama_RAG

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/: cat_articles.csv
data/raw/: page1.html  page10.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
data/vectorstore/590a4b76-4acc-4f82-9fc9-c9599a5a5ed1/: index_metadata.pickle
src/: clean_then_store.py  parse_data.py  scrape_data.py  streamlit.py
test/: query.py
