[tool.poetry]
name = "chatbot-ollama-rag"
version = "0.1.0"
description = ""
authors = ["itsboyac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
pandas = "^2.3.3"
ollama = "^0.6.1"
chromadb = "^1.3.7"
numpy = "^2.3.5"
scikit-learn = "^1.8.0"
matplotlib = "^3.10.8"
cohere = "^5.20.1"
python-dotenv = "^1.2.1"
langchain = "^1.2.0"
langchain-community = "^0.4.1"
langchain-chroma = "^1.1.0"
langchain-huggingface = "^1.2.0"
sentence-transformers = "^5.2.0"
langchain-ollama = "^1.0.1"
langchain-text-splitters = "^1.1.0"
tqdm = "^4.67.1"
langchain-core = "^1.2.3"
streamlit = "^1.52.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
